[package]
name = "st-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
device-driver = "1.0.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
rtic-sync = "1.4.0"

[features]
default = ["vn9e30f"]
vn9e30f = []
defmt-1 = [
    "dep:defmt",
    "device-driver/defmt-03",
    "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03",
    "embedded-hal-bus/defmt-03",
]
